# bk

./: .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  conf.toml  config.toml  flake.nix  zensical.toml
.woodpecker/: build.yml  container-manifest.yml  container.yml  k8s-operator-manifest.yml  k8s-operator.yml  test.yml
docs/: README.md  config-path.md  config-restic-backup.md  config-restic-target.md  config-rsync.md  config.md  notifications.md  server.md
docs/config/: config-restic-forget.md  config.md
docs/k8s/: CRDs.md  ResticRepository.md
k8s-operator/: Cargo.toml  Dockerfile  README.md  build.rs
k8s-operator/crds/: node-backups.yaml  restic-repository.yaml
k8s-operator/manifests/: deployment.yml  namespace.yml  role.yml  service-account.yml
k8s-operator/src/: backupcron.rs  crd.rs  deployment.rs  finalizer.rs  main.rs  nodebackup.rs  secrets.rs  statefulset.rs
migrations/: 0001_init.sql
nixos/: lib.nix
nixos/modules/: bk.nix
src/: args.rs  backup.rs  borg.rs  config.rs  lib.rs  main.rs  notify.rs  restic.rs  server.rs
src/cli/: mod.rs  run.rs
src/input/: mod.rs
src/restic/: binary.rs  error.rs  mod.rs  snapshot.rs
src/rsync/: mod.rs
src/systemd/: bk.service
systemd/: bk.service  bk.timer
