[package]
name = "bk"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "bk"
path = "src/main.rs"

[lib]
name = "bk"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.39"
env_logger = "0.11.8"
log = "0.4.27"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.9.0"
yansi = "1.0.1"
