[package]
name = "bk"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "bk"
path = "src/main.rs"

[lib]
name = "bk"
path = "src/lib.rs"

[dependencies]
argh = "0.1.13"
chrono = "0.4.39"
env_logger = "0.11.8"
log = "0.4.27"
openssl = { version = "0.10.73", features = ["vendored"] }
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["blocking", "rustls-tls"] }
schemars = "1.0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.0"
yansi = "1.0.1"
cmdbind = { git = "https://git.hydrar.de/jmarya/cmdbind", features = ["async"] }
facet = { version = "0.42.0", features = ["chrono"] }
facet-json = "0.42.0"
miette = { version = "7.6.0", features = ["fancy"] }
derive_builder = "0.20.2"
ssh-key = { version = "0.6.7", features = ["ed25519"] }
facet-pretty = "0.42.0"
facet-toml = "0.42.0"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = "1.49.0"
axum = "0.8.8"

