[package]
name = "bk-k8s"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = [
    "macros",
    "rt-multi-thread",
] }
kube = { version = "1.0.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.25.0", default-features = false, features = [
    "v1_33",
] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "2"
bk = { git = "https://git.hydrar.de/jmarya/bk" }
toml = "0.9.4"

[build-dependencies]
kube = { version = "1.0.0", default-features = true, features = [
    "derive",
    "runtime",
] }
k8s-openapi = { version = "0.25.0", default-features = false, features = [
    "v1_33",
] }
serde_yaml = "0.9"
serde_json = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
